--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.8.1",
     "framer-motion": "^12.4.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
