--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^2.10.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@tanstack/react-query": "4.28",
+    "@tanstack/react-query-devtools": "4.28",
     "axios": "^1.8.1",
     "framer-motion": "^12.4.7",
     "react": "^18.2.0",
