--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
